--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
     </div>
     <div class="main">
         <div class="nav">
-            <ul>
-
+            <ul class="nav-box">
+                <li class="nav-header nav-header-cur">审批管理<span class="nav-header-icon"></span></li>
+                <li class="cur"><span class="nav-icon icon-1"></span>待办事项</li>
+                <li><span class="nav-icon icon-2"></span>已办事项</li>
+                <li><span class="nav-icon icon-3"></span>待办授权</li>
+                <li class="nav-header">申请管理<span class="nav-header-icon"></span></li>
+                <li><span class="nav-icon icon-4"></span>个人报销</li>
+                <li><span class="nav-icon icon-5"></span>通用账单</li>
             </ul>
         </div>
-        <div class="content"></div>
+        <div class="content">
+            <img src="images/main1.png">
+        </div>
     </div>
 
 </div>
