--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>东航物流成本审批系统</title>
     <link rel="stylesheet" href="css/com.css"/>
-
+    <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
+    <script src="js/com.js"></script>
 </head>
 <body>
 <div class="wrap">
@@ -21,8 +22,8 @@
     <div class="main">
         <div class="nav">
             <ul class="nav-box">
-                <li class="nav-header nav-header-cur">审批管理<span class="nav-header-icon"></span></li>
-                <li class="cur"><span class="nav-icon icon-1"></span>待办事项</li>
+                <li class="nav-header">审批管理<span class="nav-header-icon"></span></li>
+                <li ><span class="nav-icon icon-1"></span>待办事项</li>
                 <li><span class="nav-icon icon-2"></span>已办事项</li>
                 <li><span class="nav-icon icon-3"></span>待办授权</li>
                 <li class="nav-header">申请管理<span class="nav-header-icon"></span></li>
