--- a/liucheng.html
+++ b/liucheng.html
@@ -96,8 +96,8 @@
                     <span class="line-1"></span>
                 </li>
                 <li>
-                    <div class="flow-end">
-                        结束
+                    <div class="flow-gray">
+                        提交申请
                     </div>
                 </li>
                 <li class="line">
@@ -129,6 +129,15 @@
                         提交申请
                     </div>
                     <p>提交人<br>660230_王念红</p>
+                </li>
+				<li class="line">
+                    <p class="line-bg"></p>
+                    <span class="line-1"></span>
+                </li>
+                <li>
+                    <div class="flow-end">
+                        结束
+                    </div>
                 </li>
             </ul>
 
