--- a/shouquan.html
+++ b/shouquan.html
@@ -4,42 +4,9 @@
     <meta charset="UTF-8">
     <title>东航物流成本审批系统</title>
     <link rel="stylesheet" href="css/com.css"/>
+    <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
+    <script src="js/com.js"></script>
     <style>
-        .ver-box {
-            overflow: hidden;
-            margin-top: 15px;
-            margin-bottom: 10px;
-        }
-        .ver-box li {
-            float: left;
-            margin-bottom: 10px;
-            margin-left: 10px;
-            margin-top: 10px;
-            line-height: 26px;
-            font-size: 14px;
-            margin-right: 20px;
-        }
-        .ver-box li label {
-            float: left;
-            text-align: right;
-            width: 90px;
-            margin-right: 10px;
-        }
-        .ver-box input {
-            border: none;
-            background: #fff;
-            width: 156px;
-            height: 26px;
-        }
-        .ver-box select {
-            width: 156px;
-            border: none;
-            height: 26px;
-        }
-        .ver-box option {
-            text-align: center;
-        }
-        .ver-box .btn{background: #225ca3;border-radius: 3px;font-size: 14px;float: left;height: 26px;line-height: 26px;width: 60px;text-decoration: none;color: #fff;text-align: center;}
 
         .split{border-bottom: 1px dotted #34b2ec;margin: 0 14px 20px;}
         .pager{text-align: center;width: 100%;margin:20px 0;}
