--- a/daiban22.html
+++ b/daiban22.html
@@ -4,45 +4,14 @@
     <meta charset="UTF-8">
     <title>东航物流成本审批系统</title>
     <link rel="stylesheet" href="css/com.css"/>
+    <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
+    <script src="js/com.js"></script>
     <style>
-        .ver-box {
-            overflow: hidden;
-            margin-top:35px;
-            margin-bottom: 30px;
-        }
-        .ver-box li {
-            float: left;
-            margin-bottom: 10px;
-            margin-left: 10px;
-            margin-top: 10px;
-            line-height: 26px;
-            font-size: 14px;
-            margin-right: 20px;
-        }
-        .ver-box li label {
-            float: left;
-            text-align: right;
-            width: 50px;
-            margin-right: 10px;
-        }
-        .ver-box input {
-            border: none;
-            background: #fff;
-            width: 156px;
-            height: 26px;
-        }
-        .ver-box select {
-            width: 156px;
-            border: none;
-            height: 26px;
-        }
-        .ver-box option {
-            text-align: center;
-        }
+        .ver-box {margin-bottom: 30px; }
+        .ver-box li label {width: 50px;}
 
 
-
-        /*本页独有style*/
+            /*本页独有style*/
         .back-btn {  position: absolute; width: 76px;  height: 36px; line-height: 36px; text-align: center;color: #fff;background: #518cae;font-size: 16px; left: 12px;top:12px;border-radius: 3px;text-decoration: none; }
         h2{font-weight: bold;color: #183e6d;font-size: 24px;text-align: center;line-height: 2;margin:0 10px;margin-top: 15px;}
         h3{font-weight: bold;color: #183e6d;font-size: 18px;text-align: center;line-height: 2;}
